tests/snapshots/formats__degas__elite.pi2.gz.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ elite.pi2 — DEGAS Elite picture, medium (640×200, 4 colours)  [0x0+0x7d42]
    Resolution: medium (640×200, 4 colours) (0x1)  [0x0+0x2]
  ▾ Palette — 16 colours  [0x2+0x20]
      [0]: "#000000" — 0x000  [0x2+0x2]
      [1]: "#ee0000" — 0x700  [0x4+0x2]
      [2]: "#00ee00" — 0x070  [0x6+0x2]
      [3]: "#0000ee" — 0x007  [0x8+0x2]
      [4]: "#eeee00" — 0x770  [0xa+0x2]
      [5]: "#00eeee" — 0x077  [0xc+0x2]
      [6]: "#ee00ee" — 0x707  [0xe+0x2]
      [7]: "#eeeeee" — 0x777  [0x10+0x2]
      [8]: "#666666" — 0x333  [0x12+0x2]
      [9]: "#880000" — 0x400  [0x14+0x2]
      [10]: "#008800" — 0x040  [0x16+0x2]
      [11]: "#000088" — 0x004  [0x18+0x2]
      [12]: "#888800" — 0x440  [0x1a+0x2]
      [13]: "#008888" — 0x044  [0x1c+0x2]
      [14]: "#880088" — 0x404  [0x1e+0x2]
      [15]: "#ffffff" — 0xfff  [0x20+0x2]
    Screen memory — interleaved bitplanes  [0x22+0x7d00]
    Colour animation (DEGAS Elite) — left/right limits, directions, delays  [0x7d22+0x20]
